feat(emulator): support Android SDK devices on Linux
Signed-off-by: Elroy Kanye <elroykdev@gmail.com>